      \item Use informative inverse-gamma priors
      for length-scale parameters of Gaussian
      processes. (#275)
      \item Allow predicting new data in models
      with ARMA autocorrelation structures.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Correctly recover noise-free coefficients
      through \code{me} terms thanks to Ruben Arslan.
      \item Fix some unexpected errors when predicting
      from ordinal models thanks to David Hervas. (#306, #307)
    }
  }
}

\section{CHANGES IN VERSION 2.0.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Export the helper functions \code{posterior_summary} 
      and \code{posterior_table} both being used to
      summarize posterior samples and predictions.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix incorrect computation of intercepts
      in \code{acat} and \code{cratio} models
      thanks to Peter Phalen. (#302)
      \item Fix \code{pointwise} computation of \code{LOO}
      and \code{WAIC} in multivariate models with estimated 
      residual correlation structure.
      \item Fix problems in various S3 methods sometimes
      requiring unused variables to be specified in 
      \code{newdata}.
      \item Fix naming of Stan models thanks to Hao Ran Lai.
    }
  }
}

\section{CHANGES IN VERSION 2.0.0}{
  This is the second major release of \code{brms}. The main
  new feature are generalized multivariate models, which now
  support everything already possible in univariate models, 
  but with multiple response variables. Further, the internal
  structure of the package has been improved considerably to be 
  easier to maintain and extend in the future.
  In addition, most deprecated functionality and arguments have 
  been removed to provide a clean new start for the package.
  Models fitted with \pkg{brms} 1.0 or higher should remain
  fully compatible with \pkg{brms} 2.0.
  \subsection{NEW FEATURES}{
    \itemize{